// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login redirection should redirect to home page on successful login 1`] = `
<Redirect
  push={false}
  to="/"
/>
`;

exports[`Login redirection should redirect to referrer page on successful login 1`] = `
<Redirect
  push={false}
  to="/some/page"
/>
`;

exports[`Login should display an error if any field is empty 1`] = `
<styled.div
  onSubmit={[Function]}
>
  <Themed(styled.div)>
    <Themed(Styled(Logo)) />
    <Themed(styled.span)>
      Operate
    </Themed(styled.span)>
  </Themed(styled.div)>
  <styled.form>
    <styled.span>
      Username and Password are both required
    </styled.span>
    <Themed(Styled(TextInput))
      aria-label="User Name"
      name="username"
      onChange={[Function]}
      placeholder="Username"
      type="text"
      value=""
    />
    <Themed(Styled(TextInput))
      aria-label="Password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <Themed(Styled(Button))
      title="Log in"
      type="submit"
    >
      Log in
    </Themed(Styled(Button))>
  </styled.form>
</styled.div>
`;

exports[`Login should display an error on unsuccessful login 1`] = `
<styled.div
  onSubmit={[Function]}
>
  <Themed(styled.div)>
    <Themed(Styled(Logo)) />
    <Themed(styled.span)>
      Operate
    </Themed(styled.span)>
  </Themed(styled.div)>
  <styled.form>
    <styled.span>
      Username and Password do not match
    </styled.span>
    <Themed(Styled(TextInput))
      aria-label="User Name"
      name="username"
      onChange={[Function]}
      placeholder="Username"
      type="text"
      value="foo"
    />
    <Themed(Styled(TextInput))
      aria-label="Password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value="bar"
    />
    <Themed(Styled(Button))
      title="Log in"
      type="submit"
    >
      Log in
    </Themed(Styled(Button))>
  </styled.form>
</styled.div>
`;

exports[`Login should render login form by default 1`] = `
<styled.div
  onSubmit={[Function]}
>
  <Themed(styled.div)>
    <Themed(Styled(Logo)) />
    <Themed(styled.span)>
      Operate
    </Themed(styled.span)>
  </Themed(styled.div)>
  <styled.form>
    <Themed(Styled(TextInput))
      aria-label="User Name"
      name="username"
      onChange={[Function]}
      placeholder="Username"
      type="text"
      value=""
    />
    <Themed(Styled(TextInput))
      aria-label="Password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <Themed(Styled(Button))
      title="Log in"
      type="submit"
    >
      Log in
    </Themed(Styled(Button))>
  </styled.form>
</styled.div>
`;
